[package]
name = "rust-changelogs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gleb Pomykalov <glebpom@gmail.com>"]

[dependencies]
octocrab = "0.44.0"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12.15", features = ["trust-dns", "rustls-tls"] }
semver = "1"
regex = "1"
itertools = "0.14.0"
chrono = "0.4"
tap = "1"
fs_extra = "1.3.0"
pluralizer = "0.5.0"
